[gd_scene load_steps=8 format=3 uid="uid://cqtv4hdnue4nu"]

[ext_resource type="Script" path="res://scripts/move_platform.gd" id="1_u47u4"]
[ext_resource type="Texture2D" uid="uid://dhdn6wmpjal2u" path="res://assets/tilemap.png" id="1_uo451"]
[ext_resource type="AudioStream" uid="uid://byimlpuf6xrjm" path="res://assets/audio/mixkit-arrow-whoosh-1491.wav" id="3_382jr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yu4w7"]
texture = ExtResource("1_uo451")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0

[sub_resource type="TileSet" id="TileSet_103bh"]
sources/0 = SubResource("TileSetAtlasSource_yu4w7")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82tyf"]
size = Vector2(30, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5o6d"]
size = Vector2(28, 0.5)

[node name="MovePlatform" type="AnimatableBody2D"]
z_index = -1
collision_layer = 32
script = ExtResource("1_u47u4")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_103bh")
format = 2
layer_0/tile_data = PackedInt32Array(0, 524288, 2, 65535, 458752, 2)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_82tyf")
metadata/_edit_lock_ = true

[node name="BeginPositionMarker" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.0860551, 0, 1)
scale = Vector2(0.2, 0.2)
skew = 0.785398
texture = ExtResource("1_uo451")
region_enabled = true
region_rect = Rect2(0, 48, 16, 16)
metadata/_edit_lock_ = true

[node name="TargetPositionMarker" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 1, 0.043654, 1)
scale = Vector2(0.2, 0.2)
skew = -0.785398
texture = ExtResource("1_uo451")
region_enabled = true
region_rect = Rect2(48, 48, 16, 16)
metadata/_edit_lock_ = true

[node name="MoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_382jr")
volume_db = -20.0
panning_strength = 3.0
metadata/_edit_lock_ = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(1.5, 0.5)
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 21
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_y5o6d")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
